# docs/swagger.yaml
@@ -1,13 +1,29 @@
 definitions:
   domain.AvailableHours:
     properties:
-      kind:
-        type: integer
       max:
         type: integer
       remaining:
         type: integer
       subject:
+        $ref: '#/definitions/domain.Subject'
+    type: object
+  domain.DegreeDescription:
+    properties:
+      groups:
+        items:
+          type: string
+        type: array
+      lastYear:
+        type: integer
+      name:
+        type: string
+    type: object
+  domain.Subject:
+    properties:
+      kind:
+        type: integer
+      name:
         type: string
     type: object
   handlers.EntryDTO:
@@ -35,6 +51,13 @@ definitions:
     properties:
       message:
         type: string
+    type: object
+  handlers.ListDegreesDTO:
+    properties:
+      list:
+        items:
+          $ref: '#/definitions/domain.DegreeDescription'
+        type: array
     type: object
 info:
   contact: {}
@@ -73,6 +96,23 @@ paths:
             $ref: '#/definitions/handlers.ErrorHttp'
         "404":
           description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.ErrorHttp'
+  /listDegrees/:
+    get:
+      description: List all degrees' descriptions avaiable, it do not require any
+        parameter
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handlers.ListDegreesDTO'
+            type: array
+        "500":
+          description: Internal Server Error
           schema:
             $ref: '#/definitions/handlers.ErrorHttp'
   /newEntry/:
